# Bazel-Build-monorepo

./: WORKSPACE.bazel  bazel-Bazel-Build-monorepo  bazel-bin  bazel-out  bazel-testlogs
.github/workflows/: main.yml
Projects/go_hello_world_/: BUILD.bazel  hello_world.go  hello_world_test.go
Projects/project1/: BUILD.bazel
